<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/theme_bg_color">
    <ImageView
        android:id="@+id/iv_register_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-50dp"
        android:layout_marginRight="-300dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/de_bg"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="vertical">
        <com.example.chat.view.AutoEditText
            android:id="@+id/aet_register_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="bottom"
            android:hint="@string/register_account_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
        />
        <com.example.chat.view.AutoEditText
            android:id="@+id/aet_register_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="bottom"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
        />
        <com.example.chat.view.AutoEditText
            android:id="@+id/aet_register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="bottom"
            android:hint="@string/register_password_confirm_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
        />
        <Button
            android:id="@+id/btn_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/base_color_text_white"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>